# 0xA2_chessengine

./: CMakeLists.txt  LICENSE  README.md  build.cmd  builder.py  compile.bat  games5.pgn  go.cmd  meson.build  mson_options.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/0xA2.exe.p/: src_chess_thc.cpp.idb  src_engine.cpp.idb  src_mcts_Thread.cpp.idb  src_mcts_evaluate.cc.idb  src_mcts_node.cpp.idb  src_mcts_search.cpp.idb  src_uci.cpp.idb
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: cmd_line.txt  coredata.dat.prev
neural/: layers.cc  layers.h  losses.cc  losses.h  net1.cc  net1.h  neural.h  neuron.cc  neuron.h  test.cc
pythonScripts/engine-tests/: tests.py
pythonScripts/testing/: client.py  daskServer.py  game.pgn  games.pgn  games.py  lc0_128x10-PB04-CCRL-swa-50000.bat  lc0_256x20-t40-1541.bat  lc0_703350.bat  server.py
pythonScripts/training/: data.py  game.pgn  model.pt  policyMoves.py  torch_train.py  train.py
src/: engine.cpp  uci.cpp  uci.h
src/chess/: thc.cpp  thc.h
src/mcts/: Thread.cpp  Thread.h  evaluate.cc  evaluate.h  node.cpp  node.h  search.cpp  search.h
src/utils/: ThreadPool.h  sha.h  (+1 more)
testing/: book.txt  client.py  game.pgn  games.pgn  games.py  games4.pgn  games5.pgn  lc0_703350.bat  lc0_new.bat  lc0_run2_730357.bat  main.py  server.py  weights_run2_730688.bat
(+4 files in other folders)
